@@ -9,6 +9,8 @@ Version 1.4.2+svn:
    * fonts: DejaVuSans 2.25
  * WML engine:
    * fix [teleport] capturing villages with the wrong side (bug #11683)
+ * campaignd
+   * made campaign server use gzip compression for networking
  * miscellaneous and bug fixes:
    * starting a campaing without any installed now gives an error.
    * fixed issues with campaign info in non-compressed saved games
